[package]
name = "novarum"
version = "1.0.0"
edition = "2021"
authors = ["antoKeinanen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version = "0.10.3", features = ["fuzzy-select"]}
glob = "0.3.1"
platform-dirs = "0.3.0"
run_shell = "0.1.13"
